--- a/index.html
+++ b/index.html
@@ -33,4 +33,58 @@
         </div>
     </header>
 
+    <section class="sub-header">
+        <img src="img/logos.png" alt="">
+        <div>
+            <h4>Bundle with Hulu plan & save</h4>
+            <h3>Get Hulu, Disney+, and ESPN+.</h3>
+            <a href="#" class="sub-link">Details</a>
+        </div>
+        <div>
+            <a href="#" class="btn btn-outline">Get Bundle</a>
+            <a href="#" class="sublink">Terms apply</a>
+
+        </div>
+    </section>
+    <sectio class="categories">
+        <h4>Included in all plans</h4>
+        <div class="text-xl">All The TV You Love</div>
+        <div class="sub-text">Stream full seasion of exclusive series, current-season episodes, hit movies, Hulu
+            Originals, kids shows, and more.</div>
+        <div class="covers">
+            <div class="cover-1">
+                <div class="cover-grad">
+                    <div class="cover-text">
+                        <div class="sub-title">Past & Current Seasons</div>
+                        <h3>TV Shows</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="cover-2">
+                <div class="cover-grad">
+                    <div class="cover-text">
+                        <div class="sub-title">New & Classics</div>
+                        <h3>Movies</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="cover-3">
+                <div class="cover-grad">
+                    <div class="cover-text">
+                        <div class="sub-title">Groundbreaking</div>
+                        <h3>Hulu Originals</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="cover-4">
+                <div class="cover-grad">
+                    <div class="cover-text">
+                        <div class="sub-title">Add-On</div>
+                        <h3>Premiums</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </sectio>
+
 </html>
