live sports section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
     </section>
-    <sectio class="categories">
+    <section class="categories">
         <h4>Included in all plans</h4>
         <div class="text-xl">All The TV You Love</div>
         <div class="sub-text">Stream full seasion of exclusive series, current-season episodes, hit movies, Hulu
@@ -85,6 +85,47 @@
                 </div>
             </div>
         </div>
-    </sectio>
+    </section>
+    <section class="live">
+        <div class="live-border">
+            <h4>Hulu + Live TV</h4>
+            <div class="sub-text">Make the switch from cable. Get 75+ top channels with your favorite live sports, news,
+                and events - plus
+                the entire Hulu streaming library.
+            </div>
+            <div class="legal-text">Live TV Plan required. Regional restrictions, blackouts, and additional terms apply.
+                See details</div>
+            <a href="#">View Channels in your Area</a>
+        </div>
+    </section>
+
+    <section class="live-sports">
+        <div class="live-sports-content">
+            <div class="text-xl">Live Sports</div>
+            <div class="sub-text">
+                Catch your games at home or on the go. Stream live games from major
+                college and pro leagues including the NCAA®, NBA, NHL, NFL, and more.
+            </div>
+
+            <div class="live-sports-logos">
+                <div>
+                    <img src="img/live-sports-logo-1.png" alt="" />
+                </div>
+                <div>
+                    <img src="img/live-sports-logo-2.png" alt="" />
+                </div>
+                <div>
+                    <img src="img/live-sports-logo-3.svg" alt="" />
+                </div>
+                <div>
+                    <img src="img/live-sports-logo-4.png" alt="" />
+                </div>
+            </div>
+
+            <div class="legal-text">
+                Live TV plan required. Regional restrictions, blackouts and additional
+                terms apply. See details
+            </div>
+    </section>
 
 </html>
