--- a/index.html
+++ b/index.html
@@ -178,5 +178,29 @@
             </div>
         </div>
     </footer>
+    <div class="modal">
+        <div class="modal-box">
+            <div class="modal-body">
+                <h3>Log In</h3>
+                <form action="">
+                    <div class="form-control">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="form-control">
+                        <label for="password">Password</label>
+                        <input type="password" id="password">
+                    </div>
+                    <p><a href="#">Forgot your email or password</a></p>
+                    <button class="btn btn-dark"></button>
+                </form>
+            </div>
+            <div class="modal-footer"></div>
+            <img class="close" src="img/close.svg" alt="" close>
+            <p>Don't have an account? <a href="#">Start your free trial</a></p>
+        </div>
+    </div>
+    <script src="js/main.js">
+    </script>
 
 </html>
