--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Stream TV and Movies Live and Online | Hulu</title>
 </head>
 
@@ -34,68 +34,72 @@
     </header>
 
     <section class="sub-header">
-        <img src="img/logos.png" alt="">
+        <img src="img/logos.png" alt="" />
         <div>
-            <h4>Bundle with Hulu plan & save</h4>
+            <h4>Bundle with any Hulu plan & save</h4>
             <h3>Get Hulu, Disney+, and ESPN+.</h3>
             <a href="#" class="sub-link">Details</a>
         </div>
         <div>
             <a href="#" class="btn btn-outline">Get Bundle</a>
-            <a href="#" class="sublink">Terms apply</a>
-
+            <a href="#" class="sub-link">Terms apply</a>
         </div>
     </section>
+
     <section class="categories">
         <h4>Included in all plans</h4>
         <div class="text-xl">All The TV You Love</div>
-        <div class="sub-text">Stream full seasion of exclusive series, current-season episodes, hit movies, Hulu
-            Originals, kids shows, and more.</div>
+        <div class="sub-text">
+            Stream full seasons of exclusive series, current-season episodes, hit
+            movies, Hulu Originals, kids shows, and more.
+        </div>
+
         <div class="covers">
             <div class="cover-1">
-                <div class="cover-grad">
-                    <div class="cover-text">
-                        <div class="sub-title">Past & Current Seasons</div>
-                        <h3>TV Shows</h3>
-                    </div>
+                <div class="cover-grad"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Past & Current Seasons</div>
+                    <h3>TV Shows</h3>
                 </div>
             </div>
             <div class="cover-2">
-                <div class="cover-grad">
-                    <div class="cover-text">
-                        <div class="sub-title">New & Classics</div>
-                        <h3>Movies</h3>
-                    </div>
+                <div class="cover-grad"></div>
+                <div class="cover-text">
+                    <div class="sub-title">New & Classics</div>
+                    <h3>Movies</h3>
                 </div>
             </div>
             <div class="cover-3">
-                <div class="cover-grad">
-                    <div class="cover-text">
-                        <div class="sub-title">Groundbreaking</div>
-                        <h3>Hulu Originals</h3>
-                    </div>
+                <div class="cover-grad"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Groundbreaking</div>
+                    <h3>Hulu Originals</h3>
                 </div>
             </div>
             <div class="cover-4">
-                <div class="cover-grad">
-                    <div class="cover-text">
-                        <div class="sub-title">Add-On</div>
-                        <h3>Premiums</h3>
-                    </div>
+                <div class="cover-grad"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Add-On</div>
+                    <h3>Premiums</h3>
                 </div>
             </div>
         </div>
     </section>
+
     <section class="live">
         <div class="live-border">
             <h4>Hulu + Live TV</h4>
-            <div class="sub-text">Make the switch from cable. Get 75+ top channels with your favorite live sports, news,
-                and events - plus
-                the entire Hulu streaming library.
+            <div class="text-xl">Live TV Makes It Better</div>
+            <div class="sub-text">
+                Make the switch from cable. Get 75+ top channels with your favorite
+                live sports, news, and events - plus the entire Hulu streaming
+                library.
             </div>
-            <div class="legal-text">Live TV Plan required. Regional restrictions, blackouts, and additional terms apply.
-                See details</div>
-            <a href="#">View Channels in your Area</a>
+            <div class="legal-text">
+                Live TV plan required. Regional restrictions, blackouts and additional
+                terms apply. See details
+            </div>
+            <a href="#">View Channels in Your Area</a>
         </div>
     </section>
 
@@ -126,6 +130,7 @@
                 Live TV plan required. Regional restrictions, blackouts and additional
                 terms apply. See details
             </div>
+        </div>
     </section>
 
     <footer class="footer">
@@ -178,29 +183,32 @@
             </div>
         </div>
     </footer>
+
     <div class="modal">
         <div class="modal-box">
             <div class="modal-body">
                 <h3>Log In</h3>
-                <form action="">
+                <form>
                     <div class="form-control">
                         <label for="email">Email</label>
-                        <input type="email" id="email">
+                        <input type="email" id="email" />
                     </div>
                     <div class="form-control">
                         <label for="password">Password</label>
-                        <input type="password" id="password">
+                        <input type="password" id="password" />
                     </div>
                     <p><a href="#">Forgot your email or password</a></p>
-                    <button class="btn btn-dark"></button>
+                    <button class="btn btn-dark">Log In</button>
                 </form>
             </div>
-            <div class="modal-footer"></div>
-            <img class="close" src="img/close.svg" alt="" close>
-            <p>Don't have an account? <a href="#">Start your free trial</a></p>
+            <div class="modal-footer">
+                <p>Don't have an account? <a href="#">Start your free trial</a></p>
+            </div>
+            <img class="close" src="img/close.svg" alt="close" />
         </div>
     </div>
-    <script src="js/main.js">
-    </script>
+
+    <script src="js/main.js"></script>
+</body>
 
 </html>
